--- a/finalproject/styles/final_base.css
+++ b/finalproject/styles/final_base.css
@@ -148,7 +148,7 @@ color: var(--mainbody);
 
 
 /* HOME */
-.hero-box {
+/* .hero-box {
 position: relative;
 height: 70vh;  
 background-image: url("../images/hero_image.jpg");
@@ -158,7 +158,7 @@ background-repeat: no-repeat;
 }
 
 /* CTA box */
-.cta {
+/* .cta {
 position: absolute;
 top: 40%;
 left: 50%;
@@ -169,6 +169,25 @@ align-self: start;
 background-color: #14bceb4f; 
 padding: 20px;
 border-radius: 10px;
+}  */
+
+.hero-box {
+position: relative;
+}
+
+.hero-box img.hero-image {
+width: 100%;
+height: auto;
+display: block;
+}
+
+.cta {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+background-color: #14bceb4f;
+text-align: center;
 }
 
 
