--- a/finalproject/styles/final_base.css
+++ b/finalproject/styles/final_base.css
@@ -183,11 +183,14 @@ display: block;
 
 .cta {
 position: absolute;
+width: 70%;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 background-color: #14bceb4f;
 text-align: center;
+padding: 10px 20px;
+border-radius: 10px;
 }
 
 
