--- a/finalproject/styles/final_medium.css
+++ b/finalproject/styles/final_medium.css
@@ -86,28 +86,37 @@ display: none;
 
 
 /* HOME */
+
 .hero-box {
 position: relative;
-height: 80vh;  
-background-image: url("../images/hero_image.jpg");
-background-size: cover;
-background-repeat: no-repeat;
-background-position: top center;  
 }
 
+.hero-box img.hero-image {
+width: 100%;
+height: auto;
+display: block;
+}
 
-/* CTA box */
 .cta {
 position: absolute;
-top: 40%;
+width: 70%;
+height: 40%;
+top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
-width: 80%;
-text-align: center;
 background-color: #14bceb4f;
-padding: 20px;
+text-align: center;
+padding: 10px 20px;
 border-radius: 10px;
 }
+
+
+
+
+.cta h1 {
+font-size: 1.2rem;
+}
+
 
 .cta h1 {
 font-size: 1.2rem;
