--- a/finalproject/styles/final_medium.css
+++ b/finalproject/styles/final_medium.css
@@ -89,18 +89,24 @@ display: none;
 
 .hero-box {
 position: relative;
+width: 100%;
+height: 80vh;           /* roughly half the viewport height */
+overflow: hidden;       /* hides bottom of image if cropped */
 }
 
-.hero-box img.hero-image {
+.hero-box img {
 width: 100%;
-height: auto;
+height: 100px;    
+object-fit: cover; 
+object-position: top;
 display: block;
 }
+
+
 
 .cta {
 position: absolute;
 width: 70%;
-height: 40%;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
